tests/int/deps_command/snapshots/integration__int__deps_command__basic__should_deps_with_include_tests_for_own_crate.snap
---
source: tests/int/deps_command/basic.rs
info:
  program: crawk
  args:
    - deps
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
analyzer -> cache
analyzer -> discover
analyzer -> error
analyzer -> graph
analyzer -> model
analyzer -> module_path
analyzer -> parser
analyzer -> reference
analyzer -> resolve
analyzer -> rules
analyzer::tests -> analyzer
analyzer::tests -> discover
analyzer::tests -> reference
cache::tests -> cache
cli -> cli::overview
cli -> cli::validation
cli -> version
cli::overview -> version
cli::tests -> cli
cli::validation::tests -> cli::validation
discover -> cache
discover::module_tree -> cache
discover::module_tree -> constants
discover::module_tree -> discover
discover::module_tree -> module_path
discover::module_tree -> utils
discover::module_tree::tests -> discover::module_tree
discover::tests -> discover
error -> discover
format::check_cmd -> format
format::check_cmd -> lib
format::cycles -> format
format::cycles -> lib
format::cycles::tests -> format::cycles
format::deps_cmd -> format
format::deps_cmd -> lib
format::deps_cmd::tests -> format::deps_cmd
format::list_cmd -> lib
format::orphans::tests -> format::orphans
format::paths -> lib
format::paths::tests -> format::paths
format::use_cmd -> lib
format::use_cmd::tests -> format::use_cmd
format::why_cmd -> lib
graph -> error
graph -> graph::cycles
graph -> graph::edges
graph -> graph::orphans
graph -> graph::paths
graph::cycles -> graph::edges
graph::cycles::tests -> graph::cycles
graph::edges -> model
graph::edges -> reference
graph::edges::tests -> graph::edges
graph::orphans -> graph::edges
graph::orphans::tests -> graph::orphans
graph::paths -> graph::edges
graph::paths::tests -> graph::paths
graph::tests -> graph
lib -> analyzer
lib -> discover
lib -> error
lib -> graph
lib -> model
lib -> reference
lib -> rules
logger -> cli
logger::tests -> logger
main -> cli
main -> format
main -> format::check_cmd
main -> format::cycles
main -> format::deps_cmd
main -> format::list_cmd
main -> format::orphans
main -> format::paths
main -> format::use_cmd
main -> format::why_cmd
main -> lib
main -> logger
main -> version
model -> reference
model::tests -> model
model::tests -> reference
module_path::tests -> module_path
parser -> cache
parser -> parser::visitor
parser -> reference
parser -> utils
parser::tests -> analyzer
parser::tests -> parser
parser::tests -> reference
parser::tests -> utils
parser::visitor -> constants
parser::visitor -> reference
parser::visitor -> utils
parser::visitor::tests -> parser::visitor
reference -> constants
reference::tests -> reference
resolve -> cache
resolve -> discover
resolve -> module_path
resolve -> reference
resolve -> utils
resolve::tests -> resolve
rules -> graph
rules -> module_path
rules -> rules::eval
rules -> rules::load
rules::eval -> graph
rules::eval -> module_path
rules::eval -> rules
rules::eval::tests -> graph
rules::eval::tests -> rules
rules::load -> error
rules::load -> graph
rules::load -> rules
rules::load::tests -> graph
rules::load::tests -> rules::load
rules::tests -> rules
utils -> constants
utils::tests -> utils

----- stderr -----
